# serde_epee

./: .gitignore  Cargo.toml  LICENSE.txt  PORTABLE_STORAGE.md  README.md
src/: byte_counter.rs  constants.rs  de.rs  error.rs  lib.rs  main.rs  section.rs  ser.rs  varint.rs
src/ser/: mod.rs
tests/: ser.rs
