[package]
name = "serde_epee"
version = "0.1.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE.txt"
description = "Serde support for EPEE"
readme = "README.md"
repository = "https://github.com/jeffro256/serde_epee"
homepage = "https://github.com/jeffro256/serde_epee"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_bytes = "0.11.5"
